//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Permission {
  id Int [pk, increment]
  name String [unique, not null]
  create_at DateTime [default: `now()`, not null]
  update_at DateTime [not null]
}

Table Role {
  id Int [pk, increment]
  name String [unique, not null]
  create_at DateTime [default: `now()`, not null]
  update_at DateTime [not null]
}

Table User {
  id String [pk]
  dni String [unique, not null]
  email String [unique, not null]
  first_name String [not null]
  last_name String [not null]
  password String [not null]
  birth_date DateTime [not null]
  phone String
  linkedIn String
  roleId Int [not null]
  institutionId Int [not null]
  create_at DateTime [default: `now()`, not null]
  update_at DateTime [not null]
}

Table Mentorship {
  id Int [pk, increment]
  title String [not null]
  description String [not null]
  max_student_spots Int [not null]
  max_mentor_spots Int [not null, default: 1]
  student_spots Int [not null]
  mentor_spots Int [not null, default: 1]
  status EstadoMentoria [not null, default: 'PENDIENTE']
  start_date DateTime [not null]
  end_date DateTime [not null]
  create_at DateTime [default: `now()`, not null]
  update_at DateTime [not null]
}

Table UserOnMentorship {
  id Int [pk, increment]
  userId String [not null]
  mentorshipId Int [not null]
  grade Int
  assign_at DateTime [default: `now()`, not null]
  update_at DateTime [not null]

  indexes {
    (userId, mentorshipId) [unique]
  }
}

Table Institution {
  id Int [pk, increment]
  name String [not null]
  type TypeInstitution [not null]
}

Table Skill {
  id Int [pk, increment]
  name String [unique, not null]
}

Table Notification {
  id Int [pk, increment]
  message String [not null]
  userId String [not null]
  read Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
}

Table PermissionToRole {
  rolesId Int [ref: > Role.id]
  permissionsId Int [ref: > Permission.id]
}

Table SkillToUser {
  skillsId Int [ref: > Skill.id]
  usersId String [ref: > User.id]
}

Table MentorshipToSkill {
  tagsId Int [ref: > Skill.id]
  mentorshipsId Int [ref: > Mentorship.id]
}

Enum TypeInstitution {
  POLO_IT
  ONG
  EMPRESA
}

Enum EstadoMentoria {
  PENDIENTE
  ACEPTADA
  PROGRAMADA
  EN_PROGRESO
  COMPLETADA
  CANCELADA
  RECHAZADA
  REAGENDADA
}

Ref: User.roleId > Role.id

Ref: User.institutionId > Institution.id

Ref: UserOnMentorship.userId > User.id [delete: Cascade]

Ref: UserOnMentorship.mentorshipId > Mentorship.id [delete: Cascade]

Ref: Notification.userId > User.id